# glm2api-manage

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/glm2api/: admin.py  config.py  logging_utils.py  model_variants.py  server.py
src/glm2api/admin_static/: index.html
src/glm2api/services/: glm_client.py  translator.py
src/glm2api/utils/: tool_parser.py  tool_protocol.py
tests/: test_model_variants.py  test_tool_parser.py  test_translator.py
